whoami/ingress-oss.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-http
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: traefik-1
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami-1.1.${CLUSTERNAME}.${DOMAINNAME}`)
      services:
        - name: whoami
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: traefik-1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami-1.1.${CLUSTERNAME}.${DOMAINNAME}`)
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-1-cert-staging
